Update index.html adicionando link para o perfil do github

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Pokedex</h1>
         <ol class="pokemons" id="pokemonsList"></ol>
       </section>
-      <span>Desenvolvido por <a href="#">Levi Carlos</a></span>
+      <span>Desenvolvido por <a href="https://github.com/levicarlosz/">Levi Carlos</a></span>
     </main>
     <!--Script-->
     <script src="/assets/js/pokeApi.js"></script>
